--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
     package="com.example.air_corporation">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="air corporation"
+        android:label="AR CORPORATION"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
